--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,8 @@
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
@@ -27,6 +28,8 @@
     "eslint": "^7.10.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "jest": "^26.5.0",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^4.3.0",
     "vue-jest": "^3.0.4"
   }
 }
