--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "egg": "^2.15.1",
-    "egg-scripts": "^2.11.0"
+    "egg-scripts": "^2.11.0",
+    "fs-extra": "^9.0.1",
+    "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
@@ -34,11 +36,6 @@
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov",
     "autod": "autod"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run test"
-    }
   },
   "ci": {
     "version": "10"
